[web] Fix emojis getting cut off in ChatThreadList div.lastMessage

--- a/web/chat/chat-thread-list.css
+++ b/web/chat/chat-thread-list.css
@@ -45,6 +45,7 @@ div.lastMessage {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  flex: 1;
 }
 .black {
   color: black;
